--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body, html {
     padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-ul { list-style: none; padding-left: 5px; }
+ul {padding-left: 5px; }
 a { color:blue; text-decoration: none;}
 .bar {
     background-color: #f9f9fb;
@@ -35,4 +35,14 @@ a { color:blue; text-decoration: none;}
 }
 figure {
     text-align: center;
+}
+section {
+    font-family: 'Courier New', Courier, monospace;
+    padding: 20px;
+    margin: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    font-size: 24px; /* Adiciona tamanho de fonte maior */
+    color: #5193a3; 
 }
